<resources>
    <string name="app_name">Noght</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>

    <!-- Preferences Titles -->
    <string name="messages_theme">Theme</string>
    <string name="sync_header">Sync</string>

    <!-- Theme Preferences -->
    <string name="mode_title">Dark Mode</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="new_dream">New Dream</string>
    <string name="add_category">Add Keywords</string>
</resources>